--- a/webui_templates/index.html
+++ b/webui_templates/index.html
@@ -1036,7 +1036,14 @@
                                     <label>Distance Multiplier:</label>
                                     <input type="number" id="multi-view-distance" class="text-input" step="0.05"
                                         min="0.05" value="1">
-                                    <small class="hint">Scales the camera distance to the target (1 = default).</small>
+                                    <small class="hint">Scales the orbit radius (1 = default).</small>
+                                </div>
+
+                                <div class="input-group" style="margin-bottom: 8px;">
+                                    <label>Orbit Radius:</label>
+                                    <input type="number" id="multi-view-radius" class="text-input" step="0.05"
+                                        min="0.05" value="1">
+                                    <small class="hint">Base orbit radius. Use 1 for the main view and adjust as needed.</small>
                                 </div>
 
                                 <div class="input-group" style="margin-bottom: 8px;">
@@ -1346,6 +1353,7 @@
         const multiViewSettings = document.getElementById('multi-view-settings');
         const multiViewCount = document.getElementById('multi-view-count');
         const multiViewDistance = document.getElementById('multi-view-distance');
+        const multiViewRadius = document.getElementById('multi-view-radius');
         const multiViewAngleList = document.getElementById('multi-view-angle-list');
         const multiViewYawStart = document.getElementById('multi-view-yaw-start');
         const multiViewYawEnd = document.getElementById('multi-view-yaw-end');
@@ -1635,6 +1643,7 @@
                 formData.append('quality', quality);
                 formData.append('num_views', multiViewCount.value);
                 formData.append('view_distance', multiViewDistance.value);
+                formData.append('view_radius', multiViewRadius.value);
                 formData.append('angle_list', multiViewAngleList.value);
                 formData.append('yaw_start', multiViewYawStart.value);
                 formData.append('yaw_end', multiViewYawEnd.value);
@@ -1914,6 +1923,7 @@
                     formData.append('output_mode', 'multi_view_frames');
                     formData.append('num_views', multiViewCount.value);
                     formData.append('view_distance', multiViewDistance.value);
+                    formData.append('view_radius', multiViewRadius.value);
                     formData.append('angle_list', multiViewAngleList.value);
                     formData.append('yaw_start', multiViewYawStart.value);
                     formData.append('yaw_end', multiViewYawEnd.value);
